Fixed dropdown functionality/styling issue for visibility

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -318,23 +318,35 @@ div.photo button
   text-decoration: inherit;
 }
 
-.date {
-  color: #9d9d9d;
+.published {
+
+  font-weight: bold;
+  font-size: 12px;
 }
 
 .dot {
+
   padding-left: 7px;
   padding-right: 5px;
   font-weight: bold;
+  font-size: 12px;
 }
 
 .visibilityButton {
+
   background-color: inherit;
   border: none;
 }
 
+.glyphicon-eye-open {
+  font-size: 12px;
+}
+
 .visibility {
-  font-weight: bold;
+
+  padding-left: 0px;
+  margin-right: 0px;
+  font-size: 12px;
 }
 
 tag {
@@ -396,6 +408,10 @@ tag {
   margin-left: 50px;
 }
 
+.date {
+  color: #9d9d9d;
+}
+
 .addCommentBox {
   margin-top: 5px;
   margin-bottom: 5px;
@@ -407,7 +423,6 @@ tag {
 }
 
 textarea {
-
   resize: none;
 }
 
